k8s/api-request/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fiap-video-request-api-deployment
  labels:
    app: fiap-video-request-api 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fiap-video-request-api
  template: 
    metadata:
      labels:
        app: fiap-video-request-api
    spec:
      containers:
      - name: fiap-video-request-api 
        imagePullPolicy: Always
        image: "ghcr.io/fiap-turma-7-grupo-48/api-request-video-slicer:latest"
        ports:
        - containerPort: 80
      dnsPolicy: ClusterFirst
