k8s/api-request/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fiap-video-request-api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx 
    nginx.ingress.kubernetes.io/proxy-body-size: "0" 
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fiap-video-request-api-service
            port:
              number: 80
